--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,18 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Package",
+      "name": "Launch",
       "type": "go",
       "request": "launch",
       "mode": "auto",
+      "program": "${fileDirname}"
+    },
+    {
+      "name": "Test",
+      "type": "go",
+      "request": "launch",
+      "mode": "test",
+      "args": ["-case", "ranking"],
       "program": "${fileDirname}"
     }
   ]
