--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       "type": "go",
       "request": "launch",
       "mode": "test",
-      "args": ["-case", "ranking"],
+      "args": ["-check.f", "RankingSuite"],
       "program": "${fileDirname}"
     }
   ]
